; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_if_clone.c_if_clone_addgroup.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_if_clone.c_if_clone_addgroup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }
%struct.if_clone = type { i32, i32 }

@IFC_NOGROUP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @if_clone_addgroup(%struct.ifnet* %0, %struct.if_clone* %1) #0 {
  %3 = alloca %struct.ifnet*, align 8
  %4 = alloca %struct.if_clone*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %3, align 8
  store %struct.if_clone* %1, %struct.if_clone** %4, align 8
  %5 = load %struct.if_clone*, %struct.if_clone** %4, align 8
  %6 = getelementptr inbounds %struct.if_clone, %struct.if_clone* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @IFC_NOGROUP, align 4
  %9 = and i32 %7, %8
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %19

11:                                               ; preds = %2
  %12 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %13 = load %struct.if_clone*, %struct.if_clone** %4, align 8
  %14 = getelementptr inbounds %struct.if_clone, %struct.if_clone* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @if_addgroup(%struct.ifnet* %12, i32 %15)
  %17 = load %struct.if_clone*, %struct.if_clone** %4, align 8
  %18 = call i32 @IF_CLONE_REMREF(%struct.if_clone* %17)
  br label %19

19:                                               ; preds = %11, %2
  ret void
}

declare dso_local i32 @if_addgroup(%struct.ifnet*, i32) #1

declare dso_local i32 @IF_CLONE_REMREF(%struct.if_clone*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
